--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/user-event": "13.2.1",
     "@types/jest": "27.0.1",
     "@types/node": "16.7.13",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
@@ -42,11 +43,12 @@
     "postcss-normalize": "10.0.1",
     "postcss-preset-env": "7.0.1",
     "prompts": "2.4.2",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-refresh": "0.11.0",
+    "react-router-dom": "^6.26.2",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
