--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@types/jest": "27.0.1",
     "@types/node": "16.7.13",
     "@types/react": "^18.3.11",
@@ -44,9 +47,11 @@
     "postcss-preset-env": "7.0.1",
     "prompts": "2.4.2",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "^18.3.1",
+    "react-parallax-tilt": "^1.7.250",
     "react-refresh": "0.11.0",
     "react-router-dom": "^6.26.2",
     "resolve": "1.20.0",
@@ -59,6 +64,7 @@
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "2.1.0",
     "webpack": "5.64.4",
     "webpack-dev-server": "4.6.0",
