--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.250",
     "react-refresh": "0.11.0",
     "react-router-dom": "^6.26.2",
