--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.16.0",
+    "@emotion/react": "^11.13.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "5.14.1",
@@ -36,6 +37,7 @@
     "fs-extra": "10.0.0",
     "html-webpack-plugin": "5.5.0",
     "identity-obj-proxy": "3.0.0",
+    "intersection-observer": "^0.12.2",
     "jest": "27.4.3",
     "jest-resolve": "27.4.2",
     "jest-watch-typeahead": "1.0.0",
@@ -49,6 +51,7 @@
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-app-polyfill": "3.0.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-dev-utils": "12.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
